Fix search buttons on small width devices

--- a/arches/app/media/css/pages/_search.scss
+++ b/arches/app/media/css/pages/_search.scss
@@ -73,7 +73,7 @@ article.main-search-container {
                         border-top: 1px solid #d8d8d8;
                         border-bottom: 1px solid #d8d8d8;
                         margin: 5px 2px;
-                        min-width: 80px;
+                        min-width: 69px;
                     }
                     .fa {
                         @include break-at(desktop-max) {
